# qoraal

./: CMakeLists.txt  Makefile  README.md  qoraal.ld
include/qoraal/: config.h  os.h  os_static.h  platform.h  qfs.h  qfs_port.h  qoraal.h
include/qoraal/common/: types.h
include/qoraal/example/: console.h
include/qoraal/qshell/: console.h
include/qoraal/svc/: svc_message.h  svc_services.h  svc_shell.h  svc_tasks.h  svc_wdt.h
src/: CMakeLists.txt  os.c  os_posix.c  os_zephyr.c  qfs_posix.c  qfs_zephyr.c  qoraal.c
src/common/: cbuffer.c  mlog.c
src/example/: console.c  console.h  platform.c  qfs_port.h  qfs_port_posix.c  qfs_port_zephyr.c  shell_cmds.c
src/qshell/: console.c  console.h  fscmds.c  qfs_port_posix.c  servicescmd.c
src/svc/: svc_logger.c  svc_message.c  svc_services.c  svc_shell.c  svc_tasks.c  svc_threads.c  svc_wdt.c
test/: CMakeLists.txt  main.c
test/common/: main.c
test/common/services/: demo.c  services.h  system.c
test/posix/: CMakeLists.txt  posix.ld
test/services/: demo.c  services.h
test/zephyr/: CMakeLists.txt  prj.conf
test/zephyr/src/: platform.c
zephyr/: CMakeLists.txt  Kconfig  module.yml  ram.ld  rom.ld
